--- a/src/css/style.css
+++ b/src/css/style.css
@@ -128,13 +128,18 @@ strong {
   color: black;
 }
 
+.strong2 {
+  font-weight: bold;
+  color: white;
+}
+
 .intro {
   width: 75rem;
 }
 
 .model {
   width: 34rem;
-  margin-top: 20rem;
+  margin-top: 10rem;
 }
 
 .model2 {
@@ -143,6 +148,10 @@ strong {
 
 .left {
   margin-left: 20rem;
+}
+
+.modelsection {
+  margin-top: 20rem;
 }
 
 .modelcite {
@@ -154,7 +163,6 @@ strong {
   font-style: italic;
   padding-left: 1rem;
   border-left: .5rem solid var(--pink);
-  margin-top: -5rem;
   display: flex;
 }
 
@@ -358,6 +366,7 @@ h2 {
   font-style: italic;
   display: flex;
   padding: 5rem;
+  color: white;
 }
 
 .video {
@@ -370,10 +379,12 @@ h2 {
   position: absolute;
   align-self: flex-end;
   margin-left: 52rem;
+  font-weight: normal;
 }
 
 .quote {
   color: var(--yellow);
+  font-style: italic;
 }
 
 .pink {
@@ -402,147 +413,60 @@ h2 {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
-/*&_slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-    background-color: black;
-    display: flex;
-    align-items: center;
+.underline {
+  text-decoration: underline;
+}
 
-    img {
-      max-width: 100%;
-    }
+.italic {
+  font-style: italic;
+  color: white;
+}
 
+input[type=range] {
+  appearance: none;
+  width: 90vw;
+  background: transparent;
+
+  &::-slider-thumb {
+    appearance: none;
   }
 
-  &_history {
-    position: absolute;
-    z-index: 2;
-    bottom: 10px;
-    width: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      height: 3px;
-
-      li {
-        width: 15%;
-        box-sizing: border-box;
-        height: inherit;
-        position: relative;
-        &:not(:last-of-type) {
-          margin-right: 5%;
-        }
-
-        button {
-          border: none;
-          outline: none;
-          position: absolute;
-          top: 0;
-          left: 0;
-          background-color: rgba(255,255,255, 0.5);
-          width: 100%;
-          height: 100%;
-          cursor: pointer;
-          transition: background-color 300ms ease;
-          &.active {
-            background-color: rgba(255,255,255, 0.95);
-          }
-        }
-      }
-    }
+  &:focus {
+    outline: none;
   }
 
-  &_control {
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    height: 100%;
-    display: block;
-    background-color: rgba(0,0,0,0.1);
-    border: 0;
-    padding: 0 5px;
-    width: 10%;
-    overflow: hidden;
-    transition: background-color 300ms ease;
+  &track {
+    width: 90vw;
+    height: 1rem;
     cursor: pointer;
+    background: transparent;
+    background-color: transparent;
+    color: transparent;
+  }
 
-    span {
-      display: inline-block;
-      width: 2vw;
-      height: 2vw;
-      position: relative;
-      box-sizing: border-box;
-      opacity: 0.65;
-      border-bottom: 3px solid white;
-      border-left: 3px solid white;
-      transition: opacity 300ms ease;
-    }
+  &::-webkit-slider-runnable-track {
+    width: 90vw;
+    height: 1.6rem;
+    cursor: pointer;
+    background: white;
+    border-radius: 1.6rem;
+  }
 
-    &:hover {
-      background-color: rgba(0,0,0,0.2);
-
-      span {
-        opacity: 0.95;
-      }
-    }
-
-    &__prev {
-      left: 0;
-      padding-left: 12px;
-        span {
-          transform: rotate(45deg);
-        }
-    }
-
-    &__next {
-      right: 0;
-      padding-right: 12px;
-       span {
-         transform: rotate(-135deg);
-       }
-    }
-  }*/
-
-.leave {
-  transform: translateX(0);
 }
 
-.enter-active.enter-next, .enter-active.enter-prev {
-  transform: translateX(0);
-  transition: transform 500ms linear;
-}
-
-.enter-next {
-  transform: translateX(100%);
-}
-
-.enter-prev {
-  transform: translateX(-100%);
-  transition: transform 500ms linear;
-}
-
-.leave-active-next {
-  transform: translateX(-100%);
-  transition: transform 500ms linear;
-}
-
-.leave.leave-active-prev {
-  transform: translateX(100%);
-  transition: transform 500ms linear;
+input[type=range]::-webkit-slider-thumb {
+  appearance: none;
+  height: 1.6rem;
+  width: 5rem;
+  border-radius: 1.6rem;
+  background: var(--blue);
+  cursor: pointer;
+  margin-top: 0;
 }
 
 @media (width <= 960px) {
