--- a/src/css/style.css
+++ b/src/css/style.css
@@ -229,11 +229,47 @@ strong {
   visibility: hidden;
   margin-top: 10rem;
   height: 56rem;
+  animation: fadeout 1s;
+}
+
+.fadeout {
+  animation: fadeout 1s;
+}
+
+@keyframes fadeout {
+
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 .img-container {
-  width: 30rem;
   right: 5rem;
+  border: 1px solid red;
+  width: 50rem;
+  position: fixed;
+
+}
+
+.content-img1 {
+  transition: 1s;
+  position: absolute;
+}
+
+.content-img2 {
+  width: 24.1rem;
+  height: 56rem;
+  transition: 1s;
+  position: absolute;
+}
+
+.content-img3 {
+  transition: 1s;
+  position: absolute;
 }
 
 .modelcite {
@@ -353,16 +389,50 @@ h2 {
 .voorna-image {
   width: 50vw;
   height: 112.9rem;
+  margin-top: 10rem;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .voor {
   background-image: url(../assets/img/voor.jpg);
+  transition: 1s;
+
+  &:hover .overlay {
+    opacity: 1;
+  }
+}
+
+.jaar {
+  color: black;
+  background-color: rgba(255, 255, 255, .8);
+}
+
+.jaar2 {
+  color: white;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: times;
+  font-size: 7rem;
+  font-weight: bold;
+  opacity: 0;
+  transition: .8s;
+  letter-spacing: .2rem;
 }
 
 .na {
   background-image: url(../assets/img/na.jpg);
+
+  &:hover .overlay {
+    opacity: 1;
+  }
 }
 
 .black {
