--- a/src/css/style.css
+++ b/src/css/style.css
@@ -251,8 +251,11 @@ strong {
   right: 5rem;
   border: 1px solid red;
   width: 50rem;
-  position: fixed;
+  height: 10rem;
+}
 
+.fixed {
+  position: fixed;
 }
 
 .content-img1 {
