--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,6 +219,29 @@ strong {
   display: flex;
 }
 
+.model-image1 {
+  background-image: url(../assets/img/one.png);
+  width: 35.8rem;
+  height: 46rem;
+  margin-bottom: 5rem;
+  align-self: center;
+}
+
+.model-image2 {
+  background-image: url(../assets/img/two.png);
+  width: 24.1rem;
+  height: 56rem;
+  align-self: center;
+}
+
+.model-image3 {
+  background-image: url(../assets/img/three.png);
+  width: 35.4rem;
+  height: 55.8rem;
+  margin-bottom: 5rem;
+  align-self: center;
+}
+
 .modelteksten {
   display: flex;
   flex-direction: column;
@@ -232,26 +255,12 @@ strong {
   animation: fadeout 1s;
 }
 
-.fadeout {
-  animation: fadeout 1s;
-}
-
-@keyframes fadeout {
-
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
 .img-container {
   right: 5rem;
-  border: 1px solid red;
-  width: 50rem;
-  height: 10rem;
+  width: 60rem;
+  height: 60rem;
+  border: 1px solid green;
+  overflow: hidden;
 }
 
 .fixed {
@@ -565,6 +574,11 @@ h2 {
   text-decoration: underline;
 }
 
+.hidden {
+  display: none;
+  border: 1px solid yellow;
+}
+
 .italic {
   font-style: italic;
   color: white;
@@ -679,7 +693,6 @@ input[type=range]::-webkit-slider-thumb {
 
   .content {
     width: 90vw;
-    border: 1px solid red;
   }
 
   .intro {
