--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,7 +41,7 @@ header {
   }
 }
 
-.introcite {
+.overgangcite {
   font-size: 5rem;
   font-weight: bold;
   font-style: italic;
@@ -49,8 +49,8 @@ header {
   line-height: 110%;
   background-color: white;
   position: absolute;
-  top: 10rem;
-  margin-left: 30%;
+  top: 30rem;
+  margin-left: 45%;
   z-index: 9;
   padding: 1.2rem;
 }
@@ -204,10 +204,27 @@ strong {
 .model {
   width: 40rem;
   margin-top: 10rem;
+
+  &:first-of-type {
+    margin-top: 5rem;
+    padding-bottom: 10rem;
+  }
+
+  &:last-of-type {
+    margin-bottom: 30rem;
+  }
 }
 
 .model2 {
   width: 60rem;
+
+  &:first-of-type {
+    margin-top: 25rem;
+  }
+
+  &:last-of-type {
+    margin-bottom: 25rem;
+  }
 }
 
 .left {
@@ -215,6 +232,7 @@ strong {
 }
 
 .modelsection {
+  right: -20rem;
   margin-top: 20rem;
   display: flex;
 }
@@ -225,6 +243,7 @@ strong {
   height: 46rem;
   margin-bottom: 5rem;
   align-self: center;
+  display: none;
 }
 
 .model-image2 {
@@ -232,6 +251,7 @@ strong {
   width: 24.1rem;
   height: 56rem;
   align-self: center;
+  display: none;
 }
 
 .model-image3 {
@@ -240,6 +260,7 @@ strong {
   height: 55.8rem;
   margin-bottom: 5rem;
   align-self: center;
+  display: none;
 }
 
 .modelteksten {
@@ -252,14 +273,17 @@ strong {
   visibility: hidden;
   margin-top: 10rem;
   height: 56rem;
-  animation: fadeout 1s;
+  animation: fadeout .5s;
 }
 
 .img-container {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
   right: 5rem;
   width: 60rem;
   height: 60rem;
-  border: 1px solid green;
   overflow: hidden;
 }
 
@@ -268,19 +292,22 @@ strong {
 }
 
 .content-img1 {
-  transition: 1s;
+  opacity: 0;
+  transition: .3s;
   position: absolute;
 }
 
 .content-img2 {
+  opacity: 0;
   width: 24.1rem;
   height: 56rem;
-  transition: 1s;
+  transition: .3s;
   position: absolute;
 }
 
 .content-img3 {
-  transition: 1s;
+  opacity: 0;
+  transition: .3s;
   position: absolute;
 }
 
@@ -294,6 +321,9 @@ strong {
   padding-left: 1rem;
   border-left: .5rem solid var(--pink);
   display: flex;
+  margin-left: -10rem;
+  margin-top: -25rem;
+  margin-bottom: 10rem;
 }
 
 .gallery {
@@ -302,7 +332,8 @@ strong {
   background-color: var(--pink);
 }
 
-.black-velvet-header {
+.velvet-header {
+  position: absolute;
   margin-left: 0;
   background-image: url(../assets/img/velvetbanner.jpg);
   background-repeat: no-repeat;
@@ -310,21 +341,49 @@ strong {
   background-position: center;
   width: 100vw;
   height: 68.4rem;
+  z-index: -1;
 
   &::after {
     content: '';
-    background: linear-gradient(rgba(255, 255, 255, 0), white);
+    background: linear-gradient(rgba(255, 255, 255, 0) 20%, white);
     width: 100vw;
     height: 68.4rem;
     position: absolute;
-    margin-top: 0;
-    margin-left: 0;
-    z-index: 2;
+    z-index: 0;
   }
 }
 
+.parallaxSection2 {
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 68.4rem;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.parallaxItem2 {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+}
+
+.parallax5 {
+  background-image: url(../assets/img/velvetbanner_1.png);
+}
+
+.parallax6 {
+  background-image: url(../assets/img/velvetbanner_2.png);
+}
+
 .minus {
-  margin-top: -20rem;
+  margin-top: -10rem;
 }
 
 .underground {
@@ -332,27 +391,60 @@ strong {
   margin-left: 10rem;
 }
 
+.undergroundContent {
+  margin-bottom: 20rem;
+}
+
+.soloContent {
+  margin-top: 15rem;
+}
+
 h2 {
   color: var(--pink);
   font-family: times;
   font-size: 3.5rem;
   font-weight: bold;
-  margin: 0 0 5rem -3rem;
+  margin: 0 0 5rem;
 }
 
-.nico-image-1 {
-  background-image: url(../assets/img/nico100.jpg);
-  background-attachment: fixed;
+.parallaxSection1 {
+  position: relative;
+  margin-top: 5rem;
+  height: 70vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.parallaxItem1 {
+  position: absolute;
+  left: 0;
+  top: 0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 67.2rem;
-  width: 100vw;
-  margin-top: 5rem;
+  height: 100%;
+  width: 100%;
+}
+
+.parallax1 {
+  background-image: url(../assets/img/nico1_1.jpg);
+}
+
+.parallax2 {
+  background-image: url(../assets/img/nico1_2.png);
+}
+
+.parallax3 {
+  background-image: url(../assets/img/nico1_3.png);
+}
+
+.parallax4 {
+  background-image: url(../assets/img/nico1_4.png);
 }
 
 .nico-image-2 {
-  background-image: url(../assets/img/nico2.jpg);
+  position: relative;
+  background-image: url(../assets/img/nico2_1.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -361,6 +453,18 @@ h2 {
   width: 100vw;
   margin-top: 5rem;
   left: 0;
+}
+
+.drolletje {
+  position: absolute;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 108rem;
+  width: 100vw;
+  left: 0;
+  top: 0;
 }
 
 .undergroundcite {
@@ -394,6 +498,7 @@ h2 {
 }
 
 .voorna {
+  position: relative;
   width: 100vw;
   display: flex;
 }
@@ -422,7 +527,7 @@ h2 {
 
 .jaar2 {
   color: white;
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(13, 13, 13, .8);
 }
 
 .overlay {
@@ -455,15 +560,6 @@ h2 {
   flex-direction: column;
   align-items: center;
   color: #cdcdcd;
-}
-
-.spuit {
-  background-image: url(../assets/img/spuit.png);
-  width: 20rem;
-  height: 64.8rem;
-  position: absolute;
-  right: 3rem;
-  bottom: -3rem;
 }
 
 .articlestyle2 {
@@ -704,7 +800,8 @@ input[type=range]::-webkit-slider-thumb {
   }
 
   .model {
-    width: 40vw;
+    width: 50vw;
+    height: 60vh;
   }
 
   .model2 {
@@ -783,6 +880,10 @@ input[type=range]::-webkit-slider-thumb {
 
 @media (width <= 600px) {
 
+  .model-image1, .model-image2, .model-image3 {
+    display: inline-block;
+  }
+
   .underground {
     width: 90vw;
     margin-left: 0;
@@ -810,7 +911,7 @@ input[type=range]::-webkit-slider-thumb {
   }
 
   .velvettitle {
-    margin-left: 0;
+    margin-left: 50rem;
     line-height: 120%;
   }
 
